# agent-contracts

./: .gitignore  LICENSE-APACHE  README.md  config.json  justfile
.github/workflows/: deploy-production.yml  deploy-staging.yml  undeploy-staging.yml
agent/: .env.sample  README.md  main.py  pyproject.toml
agent/src/: alchemy_provider.py  config.py  evm_transaction.py  gas_estimator.py  main.py  operations.py  optimizer_data_fetcher.py  rebalancer.py  rebalancer_contract.py  rebalancer_executor.py  rebalancer_handlers.py  state_assertions.py  strategy_manager.py  tx_types.py  utils.py  vault_abi.py  yield_tracker.py
agent/src/adapters/: __init__.py  lending_pool_contract.py  rebalancer_contract.py  usdc_contract.py  vault_contract.py
agent/src/adapters/abis/: __init__.py  lending_pool_abi.py  usdc_abi.py  vault_abi.py
agent/src/engine/: __init__.py  allocations_fetcher.py  context_builder.py  rebalance_operations_planner.py  rebalancer_executor.py  strategy_manager.py
agent/src/engine_types/: __init__.py  flow.py  tx_type.py
agent/src/helpers/: __init__.py  balance_helper.py  broadcaster.py  evm_transaction.py  lending_pool.py  state_assertions.py
agent/src/optimizer/: __init__.py  optimizer.py
agent/src/strategies/: __init__.py  aave_to_aave.py  aave_to_rebalancer.py  broadcaster.py  rebalancer_to_aave.py  step_strategy.py  strategy.py  strategy_context.py
agent/src/strategies/steps/: __init__.py  assert_after_mint.py  p0_get_usdc_agent_balance_before_rebalance.py  p0_start_rebalance.py  p1_withdraw_from_rebalancer.py  p1_withdraw_from_rebalancer_after_assertion.py  p2_approve_before_cctp_burn.py  p2_approve_before_cttp_burn.py  p2_cctp_burn.py  p2_cctp_burn_after_assertion.py  p2_compute_cctp_fees.py  p2_cttp_burn.py  p3_wait_attestation.py  p4_cctp_mint.py  p4_cctp_mint_after_assertion.py  p4_wait_attestation.py  p5_approve_aave_before_supply.py  p5_cctp_mint.py  p5_get_a_token_agent_balance_before_supply.py  p5_supply_aave.py  p5_supply_aave_after_assertion.py  p6_approve_aave.py  p6_complete_rebalance.py  p6_supply_aave.py  p6_withdraw_from_aave.py  p6_withdraw_from_aave_after_assertion.py  p7_deposit_into_rebalancer.py  p7_deposit_into_rebalancer_after_assertion.py  p7_withdraw_from_aave.py  p8_approve_vault_to_spend_agent_usdc.py  p8_deposit_into_rebalancer.py  p9_get_usdc_balance_before_deposit_to_rebalancer.py  step.py  step_error.py  step_retry.py  types.py
agent/src/tee/: __init__.py
agent/tests/: test_rebalancer.py
contract/: Cargo.toml  build.sh  config.json
contract-evm/: .env.sample  foundry.toml  justfile
contract-evm/broadcast/001_deploy_aave_vault.s.sol/421614/: run-1759421071576.json  run-1759421132581.json  run-1759421556384.json  (+46 more)
contract-evm/deployments/421614/: AaveVault.json
contract-evm/script/: 003_deposit.s.sol  004_transfer_eth.s.sol  005_transfer_usdc.s.sol
contract-evm/src/: AaveVault.sol
contract-evm/src/config/: Configuration.OptimismSepolia.sol  Configuration.sol
contract-evm/src/utils/: DeploymentUtils.sol
contract-evm/test/debug/: AaveVault.debug.t.sol
contract-evm/test/fork/: AaveVault.debug.t.sol
contract/src/: access_control.rs  admin.rs  agent.rs  collateral.rs  constants.rs  ecdsa.rs  external.rs  lib.rs  lifecycle.rs  snapshot_signing.rs  state_machine.rs  tx_builders.rs  types.rs  views.rs
contract/src/allowances/: aave_allow_transfer.rs  cctp_allow_burn.rs  mod.rs  rebalancer_allow_transfer.rs
contract/src/callbacks/: mod.rs  sign_callback.rs  sign_crosschain_balance_callback.rs  sign_generic_callback.rs
contract/src/encoders/: mod.rs
contract/src/encoders/aave/: lending_pool.rs  mod.rs
contract/src/encoders/cctp/: messenger.rs  mod.rs  transmitter.rs  usdc.rs
contract/src/encoders/rebalancer/: vault.rs
contract/src/steps/: aave_supply.rs  aave_withdraw.rs  cctp_burn.rs  cctp_mint.rs  complete_rebalance.rs  mod.rs  return_funds.rs  start_rebalance.rs  withdraw_for_crosschain_allocation.rs
contract/src/types/: active_session.rs  activity_log.rs  agent_action.rs  args.rs  cache_key.rs  config.rs  flow.rs  mod.rs  payload_type.rs
contract/tests/: test_init.rs  test_invest.rs  test_rebalancing.rs
contract/tests/utils/: mod.rs
contract/tests/utils/account_config/: mod.rs
contract/tests/utils/alchemy_provider/: alchemy_provider_factory.rs  iprovider_factory.rs  mod.rs  network.rs
contract/tests/utils/conversion/: mod.rs
contract/tests/utils/friendly_json_rpc_client/: mod.rs  near_network_config.rs  parser.rs
contract/tests/utils/mpc/: addresses.rs  mod.rs
deployment-scripts/: 0-init.sh  0-update.sh  1-setup.sh  README.md
deployments/: deploy-2025-10-07T11-47-59Z.json  deploy-2025-10-07T12-09-28Z.json  deploy-2025-10-07T13-24-19Z.json  deploy-2025-10-07T13-33-28Z.json  deploy-2025-10-07T13-35-27Z.json  deploy-2025-10-07T13-51-45Z.json  deploy-2025-10-07T13-55-46Z.json  deploy-2025-10-09T14-51-48Z.json  deploy-2025-10-09T14-59-00Z.json  deploy-2025-10-09T15-01-55Z.json  deploy-2025-10-09T15-04-52Z.json  deploy-2025-10-09T15-11-35Z.json  deploy-2025-10-09T15-15-43Z.json  deploy-2025-10-09T15-18-49Z.json  deploy-2025-10-09T15-34-36Z.json  deploy-2025-10-09T15-55-28Z.json  deploy-2025-10-09T15-58-25Z.json  deploy-2025-10-09T16-41-27Z.json  deploy-2025-10-09T17-03-25Z.json  deploy-2025-10-16T14-18-55Z.json  deploy-2025-10-17T11-55-03Z.json  deploy-2025-10-17T14-05-19Z.json  deploy-2025-10-21T12-26-47Z.json  deploy-2025-10-21T12-28-41Z.json  deploy-2025-10-21T12-33-31Z.json  deploy-2025-10-21T12-37-08Z.json  deploy-2025-10-21T13-03-46Z.json  deploy-2025-10-21T13-18-58Z.json  deploy-2025-10-21T13-40-26Z.json  deploy-2025-10-21T13-47-45Z.json  deploy-2025-10-21T15-24-17Z.json  deploy-2025-10-21T15-37-20Z.json  deploy-2025-10-21T18-37-55Z.json  deploy-2025-10-21T18-38-36Z.json  deploy-2025-10-21T19-21-56Z.json  deploy-2025-10-21T19-23-22Z.json  deploy-2025-10-21T19-30-35Z.json  deploy-2025-10-21T20-13-39Z.json  deploy-2025-10-21T20-17-14Z.json  deploy-2025-10-21T20-21-21Z.json  (+79 more)
scripts/: 0-common.sh  0-update.sh  1-setup.sh  2-deploy.sh  3-run-all.sh  gen-init-args.js
(+161 files in other folders)
